--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,11 +10,19 @@ jobs:
           keys:
             - v1-dependencies-{{ checksum "package.json" }}
             - v1-dependencies-
-      - run: yarn install
+      - run: npm install
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
+      - run: npm test
+      - setup_remote_docker
+      - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+      - run:
+          name: "Build docker image and push to docker registry"
+          command: |
+                cp Dockerfile.production  Dockerfile
+                docker build -t luzerz/example-nodejs-circle:latest .
+                docker build -t luzerz/example-nodejs-circle:${CIRCLE_SHA1} .
+                docker push luzerz/example-nodeks-circle:latest
       - run: echo Done
-      - run: yarn test
-      - run: Test Done!!
