--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,7 @@ jobs:
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
               cp Dockerfile.production Dockerfile
               docker build -t luzerz/example-nodejs-circle:latest .
-              docker push luzerz/example-nodejs-circle:lates .
+              docker push luzerz/example-nodejs-circle:lates
             elif [ "${CIRCLE_BRANCH}" == "staging" ]; then
               cp Dockerfile.staging Dockerfile
               docker build -t luzerz/example-nodejs-circle-staging:latest .
