--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,5 +119,5 @@ workflows:
             - build
             - test
             - ship
-          type: approval  
+          #type: approval  
 
